# bakman

./: Cargo.toml  README.md
src/: lib.rs  main.rs  model.rs
src/commands/: backup_command.rs  mod.rs  restore_command.rs
src/utils/: mod.rs
src/utils/errors/: mod.rs
tests/: test.rs
